docs: fix font stretch on homepage heading

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -17,7 +17,8 @@
 
 /* Home page */
 .name,
-.title {
+.title,
+.VPHero .text {
   font-stretch: expanded;
 }
 
